adding authorization in db-1